chore: rename to express-quick

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fast-express",
+  "name": "express-quick",
   "description": "Fast, unopinionated, minimalist web framework",
   "version": "4.18.0",
   "author": "aerox0",
